welcome.lessons.welcome.loopfor.LoopCourse.scala.code
var i=0
var pas=0
for(i<-1 to 10)
{
	if(estFaceMur)
	{
		avance()
		pas=pas+1
	}
	if(estDosMur)
	{
	gauche()

}
